--- a/static/css/base.css
+++ b/static/css/base.css
@@ -115,7 +115,7 @@ body {
     padding:5px;
     margin:5px;
     color:rgba(244, 238, 214);
-    background-color: rgba(186, 75, 64);
+    background-color: rgb(167, 167, 167);
     font-size: 20px;
     font-family: 'Rye', cursive;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -234,3 +234,57 @@ body {
     background-size: 100% 2px;
     color: rgba(244, 238, 214);
 }
+.query {
+    color:rgba(186, 75, 64);
+}
+.container-picture {
+    position: relative;
+  }
+.overlay {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: #0B1319;
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: .5s ease;
+  }
+  
+  .container-picture:hover .overlay {
+    bottom: 0;
+    height: 100%;
+    border:2px solid whitesmoke;
+    opacity: 0.9;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .card-block {
+    font-size: 20px;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .btn-picture {
+      border: 2px solid rgba(186, 75, 64) !important;
+      color:rgba(186, 75, 64) !important;
+  }
+  .btn-picture:hover {
+      background-color: rgba(186, 75, 64) !important;
+      color:whitesmoke !important;
+  }
