--- a/movies/templates/movies/search_results.html
+++ b/movies/templates/movies/search_results.html
@@ -8,7 +8,7 @@
         <form action="{% url 'search_results' %}">
             <div class="row row-search">
                 <div class="col-lg-3 col-md-3 col-sm-12 col-12">
-                    <input class="form-control" type="text" name="q" required>
+                    <input id="tags" class="form-control" type="text" name="q" required>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-12 col-12">
                     <button type="submit" class=" form-control btn btn-lg btn-search">Search</button>
@@ -18,7 +18,7 @@
         <hr>
         <div class="row">
             {% for movie in page_obj %}
-            <div class="col-lg-2 mb-3 container-picture">
+            <div class="col-lg-2 col-md-3 col-sm-6 mb-3 container-picture">
                 <img src="{{movie.picture}}" width="220" height="300" class="image">
                 <div class="overlay">
                     <div class=row>
