--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +21,23 @@
     {% endblock body %}
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://kit.fontawesome.com/7974fe88be.js" crossorigin="anonymous"></script>
     <script src="{% static 'js/base.js' %}"></script>
-</body>
-</html>
+    <script>
+        $( function() {
+            $( "#tags" ).autocomplete({
+                minLength: 3,
+                source: '{% url "autocomplete" %}'
+            }).data( "ui-autocomplete" )._renderItem = function( ul, item ) {
+                let term = $('#tags').val();
+                return $( "<li>" )
+                    .data( "ui-autocomplete-item", item )
+                    .append( "<a href=/movies/get/"+ item.id + "><img class='mr-1' width=50 height=60 src='" + item.pic + "' />" + item.title+ " (" + item.year+ ")" + "</a>")
+                    .appendTo( ul );
+                };;
+            });
+        </script>
+    </body>
+    </html>
