add script using to get rating from allocine and imdb

--- a/movies/templates/movies/movie_detail.html
+++ b/movies/templates/movies/movie_detail.html
@@ -2,7 +2,7 @@
 {% block title %}{{ object.title }}{% endblock title %}
 {% block body %}
 <section id="movie_detail" class="home-section">
-    <div class="container-fluid">
+    <div class="container-fluid remove-all-margin">
         <div class="fancy-border">
             <div class="row">
                 <div class="col-lg-3 col-md-12 mt-4 text-center">:
