--- a/movies/templates/movies/search_results.html
+++ b/movies/templates/movies/search_results.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class=row>
                         <div class="card-block">
-                            <button class="btn btn-outline-primary btn-picture">Detail</button>
+                            <a href="{% url 'movie_detail' movie.pk %}"><button class="btn btn-outline-primary btn-picture">Detail</button></a>
                             <button class="btn btn-outline-primary btn-picture">Save</button>
                         </div>
                     </div>
