add rating on movie detail

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -84,13 +84,13 @@
                 <div class="fancy-border">
                     <span class="search-title ">Search a movie ...</span>
                     <hr class="text-white">
-                    <form action="{% url 'search_results' %}">
+                    <form id="search_home" action="{% url 'search_results' %}">
                         <div class="row row-search">
                             <div class="col-lg-10 col-md-12 col-sm-12 col-12">
                                 <input id="tags" class="form-control" type="text" name="q" required>
                             </div>
                             <div class="col-lg-2 col-md-12 col-sm-12 col-12">
-                                <button type="submit" class=" form-control btn btn-search mb-3">Search</button>
+                                <button id="search_button" type="submit" class=" form-control btn btn-search mb-3">Search</button>
                             </div>
                         </div>
                     </form>
