--- a/static/css/base.css
+++ b/static/css/base.css
@@ -96,6 +96,9 @@ body {
         text-align: center;
         background: #0B1319;
     }
+    .spec-card {
+        margin-left:15px;
+    }
 }
 
 .container{
@@ -310,4 +313,20 @@ body {
     margin:0 ! important;
     margin:0 ! important;
     padding:0 ! important;
+}
+.rating-card {
+    border: 1px solid whitesmoke;
+    padding:30px;
+    margin:30px;
+}
+.fa-imdb {
+    font-size:60px;
+    color: rgba(238, 198, 72);
+}
+.iconify {
+    font-size:60px;
+    color: rgba(247, 205, 70)
+}
+.rating-title {
+    color:lightgray;
 }
