--- a/templates/_base.html
+++ b/templates/_base.html
@@ -24,6 +24,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://kit.fontawesome.com/7974fe88be.js" crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <script src="{% static 'js/base.js' %}"></script>
     <script>
         $( function() {
@@ -38,6 +39,7 @@
                     .appendTo( ul );
                 };;
             });
+
         </script>
     </body>
     </html>
