add link to sources on movie detail

--- a/movies/templates/movies/movie_detail.html
+++ b/movies/templates/movies/movie_detail.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-lg-3 lg-md-12 text-white">
                     <div class="row rating-card">
-                        <h5 class="text-center"><span class="iconify" data-icon="cib:allocine"></span></h5>
+                        <a target="_blank" href="https://www.allocine.fr/film/fichefilm_gen_cfilm={{ratings.ratings.0.allocine.id}}.html"><h5 class="text-center"><span class="iconify" data-icon="cib:allocine"></span></h5></a>
                         <hr>
                         <div class="row">
                             <div class="col-lg-5 col-md-12">
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="row rating-card">
-                        <h5 class="text-center"><i class="fab fa-imdb"></i></h5>
+                        <a target="_blank" href="https://www.imdb.com/title/tt{{ratings.ratings.1.id}}/"><h5 class="text-center"><i class="fab fa-imdb"></i></h5></a>
                         <hr>
                         <h5 class="text-center">{{ratings.ratings.1.imdb}}</h5>
                     </div>
