add model watchlist

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -39,7 +39,9 @@
                     .appendTo( ul );
                 };;
             });
-
+            $('.ui-menu').click(function(){
+                alert('test');
+            })
         </script>
     </body>
     </html>
