--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,7 +28,7 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="" >Account</a>
+                    <a class="nav-link" href="{% url 'accounts' %}" >Account</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
