--- a/templates/_base.html
+++ b/templates/_base.html
@@ -39,9 +39,19 @@
                     .appendTo( ul );
                 };;
             });
-            $('.ui-menu').click(function(){
-                alert('test');
-            })
+            if ($(window).width() > 990) {
+                $( ".watchlist_item" ).hover(function() {
+                    $(this).find('button').css('visibility', 'visible')
+                });
+                $('.watchlist_item').on("mouseleave", function() {
+                    $(this).find('button').css('visibility', 'hidden');
+                });
+            }
+            else {
+                $('.watchlist_item').find('button').each(function(){
+                    this.css('visibily', 'visible');
+                });
+            }    
         </script>
     </body>
     </html>
