--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="" >About</a>
+                    <a class="nav-link" href="/#about" >About</a>
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
