add search for director and actor

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -92,6 +92,7 @@
                             <div class="col-lg-2 col-md-12 col-sm-12 col-12">
                                 <button id="search_button" type="submit" class=" form-control btn btn-search mb-3">Search</button>
                             </div>
+                            <a class="advanced_link" href="{% url 'advanced_search' %}">Advanced search</a>
                         </div>
                     </form>
                 </div>
