--- a/accounts/templates/accounts/accounts.html
+++ b/accounts/templates/accounts/accounts.html
@@ -35,7 +35,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-6 col-12 mt-2">
+            <div class="offset-lg-6 offset-xl-6 offset-0 col-lg-6 col-12 mt-2">
                 <div class="fancy-border">
                     <h3 class="text-center text-white">Historic</h3>
                     <hr>
