--- a/static/css/base.css
+++ b/static/css/base.css
@@ -78,8 +78,8 @@ body {
 
 #about {
     background-color: rgba(143, 143, 143);
-    padding-top: 5rem;
-    padding-bottom: calc(5rem - 4.5rem);
+    padding-top: 10rem;
+    padding-bottom: calc(10rem - 4.5rem);
     background: linear-gradient(to bottom, rgba(202, 121, 90, 0.5) 0%, rgba(202, 121, 90, 0.3) 100%), url("../images/home-section-3.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -172,7 +172,7 @@ body {
 }
 .search-title {
     font-weight: bold;
-    color:whitesmoke !important;
+    color: rgba(244, 238, 214) !important;
 }
 .fancy-border {
     background: #0B1319;
@@ -185,9 +185,6 @@ body {
 }
 .fancy-border h3 {
     font-family: 'Rye', cursive;
-}
-.row-search{
-    font-family: 'Courier New', Courier, monospace;
 }
 .btn-search {
     background: rgb(186, 75, 64);
@@ -270,7 +267,6 @@ body {
     border:2px solid whitesmoke;
     opacity: 0.9;
 }
-
 .text {
     color: white;
     font-size: 20px;
@@ -426,5 +422,94 @@ body {
           margin-left: 5px;
       }
       label {
-          color:white !important;
+          color:rgba(244, 238, 214) !important;
       }
+      .advanced_link {
+          font-size:20px !important;
+          text-align: left !important;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          margin-bottom: 10px;
+      }
+      .advanced-card {
+          background-color: #0B1319;
+      }
+      .block-advanced-search {
+          border:1px solid grey;
+          padding:20px;
+          border-top:none;
+          border-bottom:none;
+      }
+      .block-advanced-search:first-child {
+          border-left:none;
+      }
+      .block-advanced-search:last-child {
+        border-right:none;
+    }
+    :root {
+        --effect: hover 1s linear infinite;
+      }
+
+.loading {
+  text-align: center;
+}
+
+.loading p {
+  display: inline-block;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 2em;
+  font-family: arial;
+  font-weight: 600;
+  transform: scale(.5);
+  color: #121212;
+  -webkit-text-stroke: 2px gray;
+}
+
+.loading p:nth-child(1) {
+  animation: var(--effect);
+}
+
+.loading p:nth-child(2) {
+  animation: var(--effect) .125s;
+}
+
+.loading p:nth-child(3) {
+  animation: var(--effect) .25s;
+}
+
+.loading p:nth-child(4) {
+  animation: var(--effect) .375s;
+}
+
+.loading p:nth-child(5) {
+  animation: var(--effect) .5s;
+}
+
+.loading p:nth-child(6) {
+  animation: var(--effect) .675s;
+}
+
+.loading p:nth-child(7) {
+  animation: var(--effect) .75s;
+}
+
+@keyframes hover {
+  0% {
+    transform: scale(.5);
+    color: #121212;
+    -webkit-text-stroke: 2px gray;
+  }
+
+  20% {
+    transform: scale(1);
+    color: pink;
+    -webkit-text-stroke: 3px red;
+    filter: drop-shadow(0 0 1px black)drop-shadow(0 0 1px black)drop-shadow(0 0 3px red)drop-shadow(0 0 5px red)hue-rotate(10turn);
+  }
+
+  50% {
+    transform: scale(.5);
+    color: #121212;
+    -webkit-text-stroke: 2px gray;
+  }
+}
