--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,7 +3,7 @@
 {% block title %}Filmosaurus{% endblock title %}
 {% block body %}
 <section id="welcome" class="home-section">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row d-none d-lg-block">
             <div class='console-container'>
                 <span id='text'></span>
@@ -18,7 +18,21 @@
         <hr>
         <div class="row">
             <div class="fancy-border">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="row d-lg-none">
+                    <div class="col-md-3 col-sm-12 col-12">
+                        <a class="low-screen-welcome-bloc" href="{% url 'account_signup' %}"><button class="btn btn-search col-12 m-1">#1 Create an account</button></a>
+                    </div>
+                    <div class="col-md-3 col-sm-12 col-12">
+                        <a class="low-screen-welcome-bloc" href="/#search"><button class="btn btn-search col-12 m-1">#2 Search a movie</button></a>
+                    </div>
+                    <div class="col-md-3 col-sm-12 col-12">
+                        <a class="low-screen-welcome-bloc"><button class="btn btn-search col-12 m-1">#3 Save the movie</button></a>
+                    </div>
+                    <div class="col-md-3 col-sm-12 col-12">
+                        <a class="low-screen-welcome-bloc" target="_blank" href="https://saveyourcinema.com/"><button class="btn btn-search col-12 m-1">#4 Watch and enjoy !</button></a>
+                    </div>
+                </div>
+                <div id="carouselExampleCaptions" class="carousel slide d-none d-lg-block" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -27,16 +41,20 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="{% static 'images/welcome-1.jpg' %}" class="d-block w-100" alt="...">
+                            <div class="d-flex justify-content-center">
+                                <img src="{% static 'images/welcome-1.jpg' %}" class="d-block w-50" alt="..." height="auto">
+                            </div>
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="fancy-border">
                                     <h5>First step</h5>
-                                    <p>The first step is to create an account. Go on the <a href="#">account creation page</a>, follow the instruction.</p>
+                                    <p>The first step is to create an account. Go on the <a href="{% url 'account_signup' %}">account creation page</a>, follow the instruction.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="{% static 'images/welcome-2.jpg' %}" class="d-block w-100" alt="...">
+                            <div class="d-flex justify-content-center">
+                                <img src="{% static 'images/welcome-2.jpg' %}" class="d-block w-50" alt="..." height="auto">
+                            </div>
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="fancy-border">
                                     <h5>Second step</h5>
@@ -45,7 +63,9 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="{% static 'images/welcome-3.jpg' %}" class="d-block w-100" alt="...">
+                            <div class="d-flex justify-content-center">
+                                <img src="{% static 'images/welcome-3.jpg' %}" class="d-block w-50" alt="..." height="auto">
+                            </div>
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="fancy-border">
                                     <h5>Third step</h5>
@@ -54,11 +74,13 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="{% static 'images/welcome-4.jpg' %}" class="d-block w-100" alt="...">
+                            <div class="d-flex justify-content-center">
+                                <img src="{% static 'images/welcome-4.jpg' %}" class="d-block w-50" alt="..." height="auto">
+                            </div>
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="fancy-border">
                                     <h5>Last step</h5>
-                                    <p>Watch and enjoy ! but keep the most important in mind ... SVOD is good, but seeing films in a cinema, on the big screen, is better. <strong>Supports movie theaters</strong></p>
+                                    <p>Watch and enjoy ! but keep the most important in mind ... SVOD is good, but seeing films in a cinema, on the big screen, is better. <a target="_blank" href="https://saveyourcinema.com/"><strong>Supports movie theaters</strong></a></p>
                                 </div>
                             </div>
                         </div>
